<resources>
    <string name="app_name">GES_AUTO</string>
    <string name="p_proofesor_fondo">P_profesor_fondo</string>
    <string name="foto_profesor">Foto_profesor</string>
    <string name="nombre">Nombre: </string>
    <string name="PrimerApellido">1º Apellido: </string>
    <string name="SegundoApellido">2º Apellido:  </string>
    <string name="contraseña">Contraseña</string>
    <string name="dni">D.N.I.:</string>
    <string name="escuela">Escuela de conductores: </string>
    <string name="permisos">Permisos: </string>
    <string name="numero_de_autoescuela">Numero: </string>
    <string name="seccion">Sección: </string>
    <string name="inicio">Inicio Sesion</string>
    <string name="logotipo">ges-auto</string>
    <string name="acceso">ACCESO USUARIO</string>
    <string name="Dni">D.N.I.</string>
    <string name="Servidor_url">Url del Servidor</string>
    <string name="Gestion_servidor">Gestion del Servidor</string>
    <string name="Guardar">Guardar</string>
    <string name="salir">Salir</string>
    <string name="Profesores">Profesores</string>
    <string name="Profesor">Profesor</string>
    <string name="Alumnos">Alumnos</string>
    <string name="Modificar">Modificar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="CrearProfesor">Crear Profesor</string>
    <string name="Root">Administrador</string>
    <string name="Alumno">Alumno</string>
    <string name="CrearAlumno">Crear Alumno</string>
    <string name="Lentes">Lentes</string>
    <string name="condicionesres">C.R.</string>
    <string name="validez">V.L.</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="lugarnaci">Lugar Ncaimiento</string>
    <string name="centrorec">Centro Reconocimiento</string>
    <string name="sexo">Sexo:</string>
    <string name="fechadenacimiento">Fecha de Nacimiento</string>
    <string name="direccion">Direccion</string>
    <string name="Practicas">Practicas</string>
    <string name="Crearpractica">Crear Practica</string>
    <string name="Practica">Practica</string>
    <string name="Fecha">Fecha</string>
    <string name="ver">Ver Completa</string>
    <string name="cmentarios">Comentario</string>
    <string name="fechaInicio">Fecha Inicio  dd/mm/yyyy hh:mm</string>
    <string name="fechaFin">Fecha Fin  dd/mm/yyyy hh:mm</string>
    <string name="Informacio">Informacion Adicional</string>
    <string name="fechaIniciosin">Fecha Inicio:</string>
    <string name="fechaFinsin">Fecha Fin: </string>
    <string name="mensadgeborradoprofesor">Al borrar Profesor se borran todas sus prácticas</string>

</resources>