<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E7AA4"
    tools:context=".deleteProfesor">


    <ScrollView
        android:layout_width="357dp"
        android:layout_height="640dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textCreatePractica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30px"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/allerta"
                android:text="@string/Profesor"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/CreateNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:ems="8"
                android:hint="@string/nombre"

                android:inputType="textWebEditText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/CreatePrimerApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:ems="8"
                android:hint="@string/PrimerApellido"

                android:inputType="textWebEditText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/CreateSegundoApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:ems="8"
                android:hint="@string/SegundoApellido"

                android:inputType="textWebEditText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Createdni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:ems="8"
                android:hint="@string/Dni"
                android:inputType="textWebEditText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Createpermisos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:ems="8"
                android:hint="@string/permisos"

                android:inputType="textWebEditText"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonCreatePractica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/Eliminar" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>